# routify-rocket.rs-template

./: .env.example  Cargo.toml  Dockerfile  Makefile  Readme.md  package.json
Source/client/: index.html  pnpm-lock.yaml  vite.config.js
Source/client/src/pages/: index.svelte
Source/server/: Cargo.toml
Source/server/src/: main.rs
Source/server/src/graphql/: altair.rs  context.rs  cookies.rs  mod.rs  mutation.rs  query.rs  subscription.rs
Source/server/src/guards/: apikey.rs  authguard.rs  mod.rs  reguest_info.rs
Source/server/src/types/: user.rs
public/: index.html
public/assets/: _fallback.5d4da8d3.js  _layout.18a84385.js  index.1e5df8e4.js  index.3fde436f.js  index.89888a3d.js  vendor.0c6ecc20.js  vendor.cd6e7a05.css  vendor.d32b63d0.js
