[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Graphql
juniper = "0.15.7"
juniper_rocket = "0.8.0"

# Server implementation
rocket = { version = "0.5.0-rc.1", features = [] }
tokio = "1.10.1"

# Logging
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4.19"

# Others
mongodb = "2.0.0-beta.3"
uuid = { version = "0.8", features = ["serde", "v5"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
hyper-reverse-proxy = "0.4"
